--- a/Components/Pages/Kalender.razor
+++ b/Components/Pages/Kalender.razor
@@ -108,7 +108,7 @@
 
 @code {
     private List<CalendarDay> calendarDays = new();
-    private string buchungenPfad = @"C:\Users\jonas\source\repos\My_own_website\My_own_website\Data\buchungen.txt";
+    private string buchungenPfad = string path = Path.Combine("Data", "buchungen.txt");
     private List<Buchung> buchungen = new();
 
     protected override void OnInitialized()
