--- a/Components/Pages/Buchung.razor
+++ b/Components/Pages/Buchung.razor
@@ -81,7 +81,7 @@
     private Dictionary<string, string> klasseCodes = new();
 
     private string BuchungenPath => Path.Combine(Env.ContentRootPath, "Data", "buchungen.txt");
-    private string KlasseCodesPath => Path.Combine(Env.ContentRootPath, "Data", "klassenCodes.txt");
+    private string KlasseCodesPath => Path.Combine(Env.ContentRootPath, "Data", "klassencodes.txt");
 
     // Slots wie im Kalender (inkl. Pausen)
     private readonly List<(int Stunde, int Minute)> moDoSlotsStart = new()
