--- a/Components/Pages/Workshops.razor
+++ b/Components/Pages/Workshops.razor
@@ -92,7 +92,7 @@
         new WorkshopModel {
             Title = "3DPrinter",
             Description = "Lerne, wie du 3D-Modelle erstellst und mit dem 3D-Drucker zum Leben erweckst.",
-            Image = "images/3dprinter.gif"
+            Image = "images/3DPrinter.gif"
         },
         new WorkshopModel {
             Title = "Bildbearbeitung",
