--- a/Components/Pages/Workshops.razor
+++ b/Components/Pages/Workshops.razor
@@ -82,7 +82,7 @@
         new WorkshopModel {
             Title = "VisualStudio",
             Description = "Entwickle dein erstes eigenes Projekt in C# mit Visual Studio und .NET.",
-            Image = "images/visualstudio.gif"
+            Image = "images/VisualStudio.gif"
         },
         new WorkshopModel {
             Title = "Podcast",
