--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,12 @@
-﻿<div class="nav-scrollable">
-    <nav class="nav-menu">
+﻿@inherits LayoutComponentBase
+@code {
+    [CascadingParameter] public bool isSmallScreen { get; set; }
+}
 
+<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+
+<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+    <nav class="nav-menu">
         <div class="nav-item">
             <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
                 <i class="bi bi-house-door-fill nav-icon"></i>
@@ -49,10 +55,21 @@
                 <span class="nav-text">Kontakte</span>
             </NavLink>
         </div>
+
+        @if (isSmallScreen)
+        {
+            <div class="nav-item mt-3">
+                <LoginDropdown />
+            </div>
+        }
     </nav>
 </div>
 
 <style>
+    .navbar-toggler {
+        display: none;
+    }
+
     .nav-scrollable {
         display: flex;
         flex-direction: column;
