--- a/Components/Pages/Buchung.razor
+++ b/Components/Pages/Buchung.razor
@@ -82,7 +82,7 @@
     private Dictionary<string, string> klasseCodes = new();
 
     private string BuchungenPath => Path.Combine(Env.ContentRootPath, "Data", "buchungen.txt");
-    private string KlasseCodesPath => Path.Combine(Env.ContentRootPath, "Data", "KlassenCodes.txt");
+    private string KlasseCodesPath => Path.Combine(Env.ContentRootPath, "Data", "klassencodes.txt");
 
     private readonly List<(int Stunde, int Minute)> moDoSlotsStart = new()
     {
