--- a/Components/App.razor
+++ b/Components/App.razor
@@ -18,6 +18,8 @@
     <Routes />
     <script src="_framework/blazor.web.js"></script>
     <script src="resize.js"></script>
+    <script src="js/logout.js"></script>
 </body>
 
 </html>
+
